--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>font-family: 'Ubuntu', sans-serif;</style>
 <div class="card" style="width: 100%;">
   <div class="container">
-    <h4><b><p style="text-align: left;"><span style="color: white; font-family: Ubuntu; font-size: large;">NightlyLabs ©</span></p></b></h4>
-    <p style="text-align: left;"><span style="color: white; font-family: Ubuntu; font-size: large;">This site was created to attack him. You can arrange a DoS or DDoS attack on it.</span></p>
+    <h4><b><p style="text-align: left;"><span style="color: white; font-family: Ubuntu; font-size: 2em;">NightlyLabs ©</span></p></b></h4>
+    <p style="text-align: left;"><span style="color: white; font-family: Ubuntu; font-size: 1.5em;">This site was created to attack him. You can arrange a DoS or DDoS attack on it.</span></p>
   </div>
 </div>
 <style>
