--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <style>
    body{
-    background-color: #808080;
+    background-color: #DCDCDC;
     </style>
     <link href="https://fonts.googleapis.com" rel="preconnect"></link><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"></link><link href="https://fonts.googleapis.com/css2?family=Ubuntu&amp;display=swap" rel="stylesheet"></link>
       <style> @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); </style>
