--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <style>
    body{
-    background-color: #DCDCDC;
+    background-color: #293133;
     </style>
     <link href="https://fonts.googleapis.com" rel="preconnect"></link><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"></link><link href="https://fonts.googleapis.com/css2?family=Ubuntu&amp;display=swap" rel="stylesheet"></link>
       <style> @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); </style>
@@ -54,7 +54,7 @@ Example
 
 /* Add rounded corners to the top left and the top right corner of the image */
 img {
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px;
 }
   .card {
     text-align: center;
