--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <style>
    body{
-    background-color: #293133;
+    background-color: #2B2B2B;
     </style>
     <link href="https://fonts.googleapis.com" rel="preconnect"></link><link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"></link><link href="https://fonts.googleapis.com/css2?family=Ubuntu&amp;display=swap" rel="stylesheet"></link>
       <style> @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); </style>
@@ -58,7 +58,7 @@ img {
 }
   .card {
     text-align: center;
-    border: 0,9px gray;
+    border: 1px black;
   }
   </style>
 </span></span></div>
