--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <big><big>Hack this!</big></big>
 <hr>
 <big>You can hack this site! This is legal! Only DDoS, DoS and SQL Infection.</big>
@@ -7,4 +6,8 @@
 <p style="border:2px solid #555; border-radius:5px; width: 350px; text-align:center;  margin:20px; padding:20px;" >pkg install wget && wget nightlytech.github.io/pentesting/cuberfox && ./cuberfox</p>
 <hr>
 Powered by NightSoft ©.
-Monochromatic, gh0stwh1t3's work.
+
+
+Monochromatic | gh0stwh1t3's work.
+<script >!function (e, t, r) {e.parsesiteCounterObject = r, e[r] = e[r] || function (){(e[r].q = e[r].q || []).push(arguments)};var c = document.createElement("script");c.type = "text/javascript", c.async = 1, c.src = t;var n = document.getElementsByTagName("script")[0];n.parentNode.insertBefore(c, n)}(window, "https://parsesite.ru/js/counter.sqi.js", "parsesiteCounter"), parsesiteCounter("hackthis.nightsoft.gq", "parsesite-sqi-counter", 2);</script>
+<div id="parsesite-sqi-counter"></div><noscript><a href="https://parsesite.ru" target="_blank"><img src="https://parsesite.ru/images/analysis-counter.png" width="88" height="31" alt="Анализ сайта"></a></noscript>
