--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ Powered by NightSoft ©.
 
 
 Monochromatic | gh0stwh1t3's work.
-<script >!function (e, t, r) {e.parsesiteCounterObject = r, e[r] = e[r] || function (){(e[r].q = e[r].q || []).push(arguments)};var c = document.createElement("script");c.type = "text/javascript", c.async = 1, c.src = t;var n = document.getElementsByTagName("script")[0];n.parentNode.insertBefore(c, n)}(window, "https://parsesite.ru/js/counter.sqi.js", "parsesiteCounter"), parsesiteCounter("hackthis.nightsoft.gq", "parsesite-sqi-counter", 2);</script>
-<div id="parsesite-sqi-counter"></div><noscript><a href="https://parsesite.ru" target="_blank"><img src="https://parsesite.ru/images/analysis-counter.png" width="88" height="31" alt="Анализ сайта"></a></noscript>
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-45222008-47a7-4c1a-aaf3-9ff13af68fe1"></div>
